fixed dark mode

--- a/static/home.css
+++ b/static/home.css
@@ -1,5 +1,5 @@
 body {
-  background: #5f788a;
+  background: #ffffff;
   color: #ffffff;
   width: 600px;
   margin: 0 auto;
